Fix checkbox spacing Fix revoke chexboxes spacing

--- a/src/assets/css/material/_main.scss
+++ b/src/assets/css/material/_main.scss
@@ -456,8 +456,14 @@ button {
   }
 }
 
-.mat-checkbox-frame {
-  border-radius: $border-radius;
+.mat-checkbox {
+  .mat-checkbox-inner-container {
+    margin-right: 15px;
+
+    .mat-checkbox-frame {
+      border-radius: $border-radius;
+    }
+  }
 }
 
 // Chips.
